Fix typos and make text adjustments

--- a/recipes/curry-rice.html
+++ b/recipes/curry-rice.html
@@ -31,7 +31,7 @@
             <li>Get the ingredients to a boil, then simmer for 20 minutes under low heat, checking occasionally to make sure the water hasn't completely evaporated</li>
             <li>Add the curry rue to the pot and stir to help it dissolve</li>
             <li>Once the rue has dissolved, the curry will thicken</li>
-            <li>Season to taste with salt, pepper, soy sauce and perhaps some sugar</li>
+            <li>Season to taste with salt, pepper, soy sauce and honey</li>
             <li>Serve the dish hot with rice, and enjoy!</li>
         </ol>
     </body>
