--- a/recipes/fresh-springrolls.html
+++ b/recipes/fresh-springrolls.html
@@ -6,8 +6,8 @@
     </head>
     <h1>Fresh springrolls</h1>
     <a href="../index.html" html rel="noopener noreferrer">Home</a>
-    <br />
-    <br />
+    <br/>
+    <br/>
     <img src="fresh-springrolls.jpg" width="300" height="200"/>
     <h3>Description</h3>
     <p>Fresh springrolls are a Vietnamese delicacy. As opposed to their fried counterparts, and as the name implies, these springrolls are uncooked and as such are enjoyed cold. They typically contain a type of meat, such as pork or shrimp, as well as leafy lettuce and fresh herbs, and they are dipped in a delicious hoisin peanut sauce.</p>
@@ -37,7 +37,7 @@
         <li>Remove the leaves from the stems of your herbs</li>
         <li>When done soaking, de-stem the mushrooms and cut them into strips</li>
         <li>Pour the water from the kettle onto a flat plate</li>
-        <li>Gently soak the rice paper into the now lukewarm water on both sides, then put on a different plate</li>
+        <li>Gently soak the rice paper into the now lukewarm water on both sides, then put on a cutting board</li>
         <li>Add your fillings, starting with a piece of lettuce, some rice noodles, mushrooms and an even mix of the three different herbs</li>
         <li>Fold both sides of the rice paper a third of the way, then half close the springroll, making sure to leave some space to add the final ingredient</li>
         <li>Add three or four shrimps to the remaining open space – make sure to place them with their backs facing outwards</li>
