--- a/recipes/spanish-tortilla.html
+++ b/recipes/spanish-tortilla.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Tortilla de Patatas</h1>
-        <a href="../index.html" htm rel="noopener noreferrer">Home</a>
+        <a href="../index.html" html rel="noopener noreferrer">Home</a>
         <br/>
         <br/>
         <img src="spanish-tortilla.jpg" alt="Picture of a tortilla de patatas" width="300" height="200"/>
@@ -21,7 +21,7 @@
         <h3>Steps</h3>
         <ol>
             <li>Cut your potatoes into very thin slices, preferably as equally sized as possible</li>
-            <li>Fill a deep non-stick pan with olive oil, turn on the stove at medium heat and add the potatoes once the oil is hot enough - add them very carefully to prevent splashing of hot oil</li>
+            <li>Fill a deep non-stick pan with olive oil, turn on the stove at medium heat and add the potatoes once the oil is hot enough – add them very carefully to prevent splashing of hot oil</li>
             <li>Cook the potatoes in the oil at medium-low heat for about 30 minutes</li>
             <li>Set aside the cooked potatoes and cover with tinfoil for 30 minutes</li>
             <li>Add your beaten eggs to the mixture, and then add it back into the pan on medium heat</li>
